--- a/index.html
+++ b/index.html
@@ -8,53 +8,53 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-        <h1>Meet Our Team</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio in suscipit nobis minus nisi deleniti recusandae nihil exercitationem ab hic! Aut blanditiis libero id sunt harum, natus minus in ullam?</p>
+    <main>    
+            <h1>Meet Our Team</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio in suscipit nobis minus nisi deleniti recusandae nihil exercitationem ab hic! Aut blanditiis libero id sunt harum, natus minus in ullam?</p>
 
-        <div class="cards clearfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
+        <div class="team">
+            <div class="cards clearfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>
+            </div>
+
+            <div class="cards clerfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>
+            </div>
+
+            <div class="cards clearfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>       
+            </div>
+
+            <div class="cards clearfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>
+            </div>
+
+            <div class="cards clearfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>
+            </div>
+
+            <div class="cards clearfix">
+                <img src="img/female1.png" alt="Marta Ipsum">
+                <h2>Marta ipsum</h2>
+                <h3>SEO Specialist</h3>
+                <span>email@email.it</span>
+            </div>
         </div>
-
-        <div class="cards clerfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
-        </div>
-
-        <div class="cards clearfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
-
-        </div>
-
-        <div class="cards clearfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
-        </div>
-
-        <div class="cards clearfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
-        </div>
-
-        <div class="cards clearfix">
-            <img src="img/female1.png" alt="Marta Ipsum">
-            <h2>Marta ipsum</h2>
-            <h3>SEO Specialist</h3>
-            <span>email@email.it</span>
-        </div>
-
     </main>
 </body>
 </html>
