--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Floating cards</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Macondo&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>    
@@ -15,55 +18,55 @@
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
-                <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <img src="img/male1.png" alt="Marco Bianchi">
+                <h2>MARCO BIANCHI</h2>
+                <h3>Designer</h3>
+                <span>marcobianchi@email.it</span>
             </div>
         </div>
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
-                <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <img src="img/female1.png" alt="Laura Rossi">
+                <h2>LAURA ROSSI</h2>
+                <h3>Front-end Developer</h3>
+                <span>laurarossi@team.com</span>
             </div>
         </div>
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
-                <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <img src="img/male2.png" alt="Giorgio Verdi">
+                <h2>GIORGIO VERDI</h2>
+                <h3>Back-end Developer</h3>
+                <span>giorgioverdi@team.com</span>
             </div>
         </div>
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
+                <img src="img/female2.png" alt="Marta Ipsum">
+                <h2>MARTA IPSUM</h2>
                 <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <span>martaipsum@team.com</span>
             </div>
         </div>
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
-                <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <img src="img/male3.png" alt="Roberto Lorem">
+                <h2>ROBERTO LOREM</h2>
+                <h3>Project Manager</h3>
+                <span>robertolorem@team.com</span>
             </div>
         </div>
 
         <div class="team-members">
             <div class="cards clearfix">
-                <img src="img/female1.png" alt="Marta Ipsum">
-                <h2>Marta ipsum</h2>
-                <h3>SEO Specialist</h3>
-                <span>email@email.it</span>
+                <img src="img/female3.png" alt="Daniela Amet">
+                <h2>DANIELA AMET</h2>
+                <h3>Analyst</h3>
+                <span>danielaamet@team.com</span>
             </div>
         </div>
 
